# ros2_ws_training4

./: LICENSE  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ur10_control/share/ament_index/resource_index/package_run_dependencies/: ur10_control
install/ur10_control/share/ament_index/resource_index/parent_prefix_path/: ur10_control
install/ur10_control/share/ur10_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur10_control/share/ur10_control/cmake/: ur10_controlConfig.cmake
install/ur10_control/share/ur10_control/config/: ur_controllers.yaml
install/ur10_control/share/ur10_control/launch/: ur10.launch.py
log/: latest_build  latest_list
src/test_control/: package.xml  setup.py
src/test_control/test_control/: test_noeud.py
src/ur10_control/: CMakeLists.txt  package.xml
src/ur10_control/launch/: test.launch.py  test_trajectory_controller.launch.py  ur10.launch.py  ur_control.launch.py
src/ur10_demo_mouvment/: CMakeLists.txt  package.xml
src/ur10_demo_mouvment/config/: goal_publishers_config.yaml
src/ur10_demo_mouvment/launch/: autonomous_demo.launch.py  init_position.launch.py  shell_command.launch.py
src/ur10_demo_mouvment/script/: command_shell_robot.py
src/ur10_description/: CMakeLists.txt  package.xml
src/ur10_description/launch/: view_ur.launch.py
src/ur10_description/urdf/: ur.urdf.xacro  ur_macro.xacro
src/ur10_moveit_control/: CMakeLists.txt  package.xml
src/ur10_moveit_control/launch/: ur_moveit.launch.py
